--- a/index.html
+++ b/index.html
@@ -29,28 +29,22 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">V</h2>
+    	<h2 style="color:#F2B300;">P</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">A</h2>
+    	<h2 style="color:#0719D4;">R</h2>
     </div>
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">S</h2>
+    	<h2 style="color:#8FAD00;">Y</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">H</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
-    </div>
-    <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">L</h2>
-	</div>
-	<div class="balloons text-center" id="b8">
-    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -100,16 +94,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>You truly are the best boss around</p>
-				<p>– always calm during the face of deadline and is able to keep everyone on track.</p>
-				<p>I like your solution in puzzle way(realistic example).</p>
-				<p>It is truly a great experience to be part of your team and this is why</p> 
-				<p>I look forward to another year ahead of being a part of your team.</p>
-				<p>and i hope that Now, You have recover to knee injury</p> 
-				<p>and flat your tummy then we will play together.</p>
-				<p>I hope, We will give you a weapon soon to fight for your real battle ground.</p>
-				<p>Forgive me for tense and sentences error.</p>
-				<p> you live up to a hundred years, happy birthday boss!</p>
+				<p>sweet sister</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
